# MemoryLens

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  docker-compose.prod.yml  docker-compose.yml  start-demo.bat
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/ai/: clarify.py  cleaning.py  confidence.py  embedder.py  fusion.py  identify.py  llm.py  matching.py  pipeline.py  ports.py  reasoning.py  reranker.py  retriever.py  song_guess.py  types.py
backend/app/api/: deps.py
backend/app/core/: config.py  errors.py  logging.py  metrics.py  middleware.py  rate_limit.py  security.py
backend/app/domain/: categories.py
backend/app/infra/: cache.py  db.py  itunes.py  models.py  omdb.py  openlibrary.py  rawg.py  redis.py  tmdb.py
backend/app/ingest/: base.py  fixture_adapter.py  (+5 more)
backend/eval/: RESULTS.md  dataset.json
backend/migrations/: env.py
backend/scripts/: backfill_posters.py  backfill_song_covers.py  ingest.py  run_eval.py
backend/tests/: conftest.py  test_admin.py  test_challenge.py  test_cleaning.py  test_confidence.py  test_config.py  test_constellation.py  test_eval_metrics.py  test_feedback_service.py  test_fusion.py  test_health.py  test_identify.py  test_ingest.py  test_itunes.py  test_language.py  test_omdb.py  test_openlibrary.py  test_pipeline_clarify.py  test_pipeline_guards.py  test_pipeline_parallel.py  test_pipeline_results.py  test_rate_limit.py  test_rawg.py  test_reasoning_parse.py  test_search_service.py  test_security.py  test_song_guess.py  test_tmdb_images.py
(+128 files in other folders)
