[project]
name = "memorylens-backend"
version = "0.1.0"
description = "MemoryLens API — find what you partially remember"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "email-validator>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "redis>=5.1",
    "argon2-cffi>=23.1",
    "pyjwt>=2.9",
    "httpx>=0.27",
    "structlog>=24.4",
]

[project.optional-dependencies]
ai = [
    "sentence-transformers>=3.2",
]
dev = [
    "ruff>=0.7",
    "black>=24.10",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
